Update to Java 21, Paper 1.21
Code health, migrate to new constructs